--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=demo
-server.port=9001
-server.forward-headers-strategy=framework
+server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/skill_exchange?createDatabaseIfNotExist=true
+# In-memory DB (NO MySQL)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=Amypo
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# Disable schema actions
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+
+# Allow Mockito to override beans
+spring.main.allow-bean-definition-overriding=true
