--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.jpa.show-sql=false
 
 # Allow Mockito to override beans
 spring.main.allow-bean-definition-overriding=true
+
+
+
+
+# spring.application.name=SkillBarter
+# server.port=8080
+# spring.main.allow-bean-definition-overriding=true
