--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,16 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-maven-plugin</artifactId>
+    <configuration>
+        <mainClass>com.example.barter.SkillBarterApplication</mainClass>
+    </configuration>
+</plugin>
+
         </plugins>
     </build>
+
+
 
 </project>
