--- a/pom.xml
+++ b/pom.xml
@@ -77,20 +77,19 @@
         </dependency>
 
     </dependencies>
-
+<!-- 
     <build>
-        <plugins>
-            <plugin>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-maven-plugin</artifactId>
-    <configuration>
-        <mainClass>com.example.barter.SkillBarterApplication</mainClass>
-    </configuration>
-</plugin>
-
-        </plugins>
-    </build>
-
-
+        <plugins> -->
+           <build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <mainClass>com.example.barter.SkillBarterApplication</mainClass>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
