--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-server.port=9001
+server.port=9001kig
 server.forward-headers-strategy=framework
 
 spring.datasource.url=jdbc:mysql://localhost:3306/skill_demo?createDatabaseIfNotExist=true
